--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "hapi": "^13.0.0"
+    "hapi": "^13.0.0",
+    "rethinkdb": "^2.2.1"
   }
 }
